0.5.0
-----
1. Update to bliss-rs 0.11.1
2. Only build static-libav and symphonia by default.
3. Don't crash if file has no tags.
4. Set log level for tag reader library.
5. Multi-threaded read of existing analysis tags.

0.4.0
-----
1. Add action to export results from DB to files.
2. Add option to preserve file modification time when writing tags.
3. Store analysis in BLISS_ANALYSIS tag, not in a COMMENT tag.
4. Fix reading of tags during analysis phase.
5. Check for multiple genre tags, and if found add as semi-colon separated
   list to DB.
6. When analysing files, always read tags (if present), but only write tags
   if '--tags' is specified on commandline.
7. Use max of 16 significant digits (trailing zeros stripped) when writing
   analysis results to file tags.
8. Strip symbols from release binaries.
9. Gracefully handle Ctrl-C.

0.3.0
-----
1. Add support for (DSD) WavPack - thanks to Bart Lauret
2. Update version of tag reader library.
3. Update version of bliss library.
4. Allow builds to either use dynamic ffmpeg libraries, static ffmpeg
   libraries, symphonia, or ffmpeg on commandline.
5. Add ability to specify LMS JSONRPC port.
6. If new files analysed and 'ignore' file exists then update DB's 'ignore'
   flags.
7. Add option to write analysis results to files, and use for future scans.
8. If log level set to 'trace' then set this level for the bliss library too.
9. Enable support for '.dsf' files.

0.2.3
-----
1. Add option to limit number of concurrent threads.
2. Update version of tag reader library.
3. Update version of bliss library.

0.2.2
-----
1. Update version of tag reader library.
2. Update version of bliss library.

0.2.1
-----
1. Update version of tag reader library.
2. Fix checking if CUE already analysed.

0.2.0
-----
1. Tidy up code, thanks to Serial-ATA
2. Update version of tag reader library, should now support ID3v2 in FLAC.
3. Show error message if can't open, or create, DB file.