@@ -20,6 +20,7 @@ log = "0.4.14"
 env_logger = "0.11.7"
 indicatif = "0.16.2"
 lofty = "0.22.2"
+filetime = "0.2"
 dirs = "1"
 chrono = "0.4.40"
 regex = "1"
