@@ -5,6 +5,8 @@
 3. Don't crash if file has no tags.
 4. Set log level for tag reader library.
 5. Multi-threaded read of existing analysis tags.
+6. Store file failures in DB so don't re-analyse unless timestamp of file
+   changes.
 
 0.4.0
 -----
